# watson2sf

./: TODO  TODO.md  config.toml.example  notes  pyproject.toml  requirements.txt  setup.py  watson2sf.py
config/: new-timecards.side
src/watson2sf/: __init__.py  configFiles.py
