[project]
name = "watson2sf"
version = "0.1.0"
authors = [
    {name = "Tom Moyer", email = "tom.moyer@canonical.com"},
]
description = "Convert Watson's CSV output to Selenium IDE script from mfo"
readme = "README.md"
requires-python = ">=3.8"


[tool.poetry.scripts]
watson2sf = "watson2sf:cli"

[tool.poetry]
name = "watson2sf"
version = "0.1.0"
description = ""
authors = ["Tom Moyer <tommoyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
